# osu-directer

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  sign.ps1
.github/workflows/: build.yml  checks.yml  publish.yml
src/: config.rs  main.rs  utils.rs  windows.rs
