[package]
name = "osu-directer"
version = "1.2.1"
authors = ["ArjixWasTaken", "Jørgen P. Tjernø <jorgen@tjer.no>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "^1"
const_format = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12.0"
structopt = "0.3"
thiserror = "^1"
url = "^2.2.0"
webextension_pattern = { version ="0.3", features = ["serde"] }
winreg = "0.10.1"
reqwest = { version = "0.11.13", features = [ "blocking" ] }

windows = { version = "0.35.0", features = [ "Storage", "Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging" ] }
winres = "^0.1"
regex = "1.7.0"
osu-db = "0.3.0"

[build-dependencies]
winres = "^0.1"


[package.metadata.winres]
OriginalFilename = "osu-directer.exe"
FileDescription = "osu-directer"
ProductName = "osu!directer"
LegalCopyright = "© ArjixWasTaken, Jørgen Tjernø <jorgen@tjer.no>"
